--- a/assets/popup.css
+++ b/assets/popup.css
@@ -235,4 +235,47 @@ body {
 .buttons img{
     width:50px;
     height: 50px;
+    position:relative;
+}
+
+/* hover text over img */
+
+.ocr-button{
+    position: relative;
+}
+
+.ocr-button:hover::after{
+    content: attr(data-tooltip);
+    background: #fca311;
+    color:white;
+    padding:0px;
+    border-radius: 5px;
+    font-size:0.9em;
+    font-weight: 520;
+    text-align: center;
+
+    position: absolute;
+    left:100%;
+    margin-left: 0px;
+    width:180px;
+}
+
+.pip-button{
+    position: relative;
+}
+
+.pip-button:hover::after{
+    content: attr(data-tooltip);
+    background: #fca311;
+    color:white;
+    padding:0px;
+    border-radius: 5px;
+    font-size:0.9em;
+    font-weight: 520;
+    text-align: center;
+
+    position: absolute;
+    right:100%;
+    margin-left: 0px;
+    width:120px;
 }
